source/front-end/parser.output
Terminals unused in grammar

    DEC_FUNC_PREC


State 13 conflicts: 2 shift/reduce


Grammar

    0 $accept: INPUT $end

    1 INPUT: %empty
    2      | INPUT PROGRAM

    3 $@1: %empty

    4 PROGRAM: $@1 DEC_FUNCS START_FUNCTION DEC_FUNCS

    5 $@2: %empty

    6 START_FUNCTION: START_FUNC_DECL $@2 LPARENT RPARENT FUNCTION_BLOCK

    7 DEC_FUNCS: %empty
    8          | DEC_FUNCS DEC_FUNC

    9 $@3: %empty

   10 DEC_FUNC: RETURNTYPE IDENTIFIER $@3 LPARENT DEC_FUNC_CALL_PARAMS RPARENT FUNCTION_BLOCK

   11 DEC_FUNC_CALL_PARAMS: %empty
   12                     | RETURNTYPE IDENTIFIER DEC_FUNC_CALL_PARAMS_OPT

   13 DEC_FUNC_CALL_PARAMS_OPT: %empty
   14                         | COMMA RETURNTYPE IDENTIFIER DEC_FUNC_CALL_PARAMS_OPT

   15 RETURNTYPE: DATATYPE
   16           | VOID

   17 STATEMENTS: %empty
   18           | STATEMENTS STATEMENT

   19 STATEMENT: VARIABLE_DEF
   20          | ASSIGNMENT
   21          | EXPRESSION_SC
   22          | RETURN_CALL
   23          | CONTROL_FLOW
   24          | FUNCTION_BLOCK

   25 $@4: %empty

   26 FUNCTION_BLOCK: $@4 LCURLYBRACE STATEMENTS RCURLYBRACE

   27 VARIABLE_DEF: DATATYPE IDENTIFIER ASSIGN EXPRESSION SEMICOLON

   28 ASSIGNMENT: IDENTIFIER ASSIGN EXPRESSION SEMICOLON
   29           | IDENTIFIER MODIFIER EXPRESSION SEMICOLON

   30 EXPRESSION_SC: EXPRESSION SEMICOLON

   31 RETURN_CALL: CF_RETURN RETURN_CALL_OPT SEMICOLON

   32 RETURN_CALL_OPT: %empty
   33                | EXPRESSION

   34 $@5: %empty

   35 $@6: %empty

   36 CONTROL_FLOW: CF_IF EXPRESSION LCURLYBRACE $@5 STATEMENTS $@6 RCURLYBRACE CONTROL_FLOW_OPT_ELSE

   37 $@7: %empty

   38 CONTROL_FLOW: CF_FOR $@7 VARIABLE_DEF EXPRESSION SEMICOLON ASSIGNMENT LCURLYBRACE STATEMENTS RCURLYBRACE

   39 $@8: %empty

   40 $@9: %empty

   41 CONTROL_FLOW: CF_WHILE EXPRESSION LCURLYBRACE $@8 STATEMENTS $@9 RCURLYBRACE

   42 $@10: %empty

   43 $@11: %empty

   44 CONTROL_FLOW: CF_DO LCURLYBRACE $@10 STATEMENTS $@11 RCURLYBRACE CF_WHILE EXPRESSION SEMICOLON

   45 CONTROL_FLOW_OPT_ELSE: %empty
   46                      | CF_ELSE LCURLYBRACE STATEMENTS RCURLYBRACE

   47 EXPRESSION: UNARY_OPERATOR EXPRESSION
   48           | EXPRESSION LINEAR_ARITHMETIC EXPRESSION
   49           | EXPRESSION PLUS EXPRESSION
   50           | EXPRESSION MINUS EXPRESSION
   51           | EXPRESSION RELATIONAL_OPERATOR EXPRESSION
   52           | EXPRESSION AND_OPERATOR EXPRESSION
   53           | EXPRESSION OR_OPERATOR EXPRESSION
   54           | EXPRESSION EQUALITY_OPERATOR EXPRESSION
   55           | LPARENT EXPRESSION RPARENT
   56           | FUNCTION_CALL
   57           | IDENTIFIER
   58           | CONSTANT

   59 UNARY_OPERATOR: MINUS
   60               | NEGATION

   61 FUNCTION_CALL: IDENTIFIER LPARENT FUNC_CALL_PARAM RPARENT

   62 FUNC_CALL_PARAM: %empty
   63                | EXPRESSION FUNC_CALL_PARAM_OPT

   64 FUNC_CALL_PARAM_OPT: %empty
   65                    | COMMA EXPRESSION FUNC_CALL_PARAM_OPT

   66 CONSTANT: INTEGER_CONSTANT
   67         | FLOAT_CONSTANT
   68         | BOOLEAN_CONSTANT
   69         | CHARACTER_CONSTANT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER_CONSTANT <IntConst> (258) 66
    FLOAT_CONSTANT <FloatConst> (259) 67
    NEGATION <CharConst> (260) 60
    CF_IF <token> (261) 36
    CF_ELSE <token> (262) 46
    CF_FOR <token> (263) 38
    CF_WHILE <token> (264) 41 44
    CF_DO <token> (265) 44
    CF_RETURN <token> (266) 31
    LPARENT <token> (267) 6 10 55 61
    RPARENT <token> (268) 6 10 55 61
    LCURLYBRACE <token> (269) 26 36 38 41 44 46
    RCURLYBRACE <token> (270) 26 36 38 41 44 46
    SEMICOLON <token> (271) 27 28 29 30 31 38 44
    COMMA <token> (272) 14 65
    START_FUNC_DECL <funcDecl> (273) 6
    BOOLEAN_CONSTANT <BoolConst> (274) 68
    MINUS <CharConst> (275) 50 59
    LINEAR_ARITHMETIC <string> (276) 48
    PLUS <string> (277) 49
    DATATYPE <string> (278) 15 27
    VOID <string> (279) 16
    IDENTIFIER <string> (280) 10 12 14 27 28 29 57 61
    CHARACTER_CONSTANT <string> (281) 69
    RELATIONAL_OPERATOR <string> (282) 51
    AND_OPERATOR <string> (283) 52
    OR_OPERATOR <string> (284) 53
    EQUALITY_OPERATOR <string> (285) 54
    ASSIGN <string> (286) 27 28
    MODIFIER <string> (287) 29
    DEC_FUNC_PREC (288)
    DEC_FUNC_PREC2 (289)
    UNARY_OPERATOR_PREC (290)


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    INPUT (37)
        on left: 1 2
        on right: 0 2
    PROGRAM (38)
        on left: 4
        on right: 2
    $@1 (39)
        on left: 3
        on right: 4
    START_FUNCTION <funcDecl> (40)
        on left: 6
        on right: 4
    $@2 (41)
        on left: 5
        on right: 6
    DEC_FUNCS <_funcDeclList> (42)
        on left: 7 8
        on right: 4 8
    DEC_FUNC <funcDecl> (43)
        on left: 10
        on right: 8
    $@3 (44)
        on left: 9
        on right: 10
    DEC_FUNC_CALL_PARAMS <funcDeclParamsList> (45)
        on left: 11 12
        on right: 10
    DEC_FUNC_CALL_PARAMS_OPT <funcDeclParamsList> (46)
        on left: 13 14
        on right: 12 14
    RETURNTYPE <string> (47)
        on left: 15 16
        on right: 10 12 14
    STATEMENTS <stmntList> (48)
        on left: 17 18
        on right: 18 26 36 38 41 44 46
    STATEMENT <stmnt> (49)
        on left: 19 20 21 22 23 24
        on right: 18
    FUNCTION_BLOCK <stmnt> (50)
        on left: 26
        on right: 6 10 24
    $@4 (51)
        on left: 25
        on right: 26
    VARIABLE_DEF <stmnt> (52)
        on left: 27
        on right: 19 38
    ASSIGNMENT <stmnt> (53)
        on left: 28 29
        on right: 20 38
    EXPRESSION_SC <stmnt> (54)
        on left: 30
        on right: 21
    RETURN_CALL <stmnt> (55)
        on left: 31
        on right: 22
    RETURN_CALL_OPT <expr> (56)
        on left: 32 33
        on right: 31
    CONTROL_FLOW <stmnt> (57)
        on left: 36 38 41 44
        on right: 23
    $@5 (58)
        on left: 34
        on right: 36
    $@6 (59)
        on left: 35
        on right: 36
    $@7 (60)
        on left: 37
        on right: 38
    $@8 (61)
        on left: 39
        on right: 41
    $@9 (62)
        on left: 40
        on right: 41
    $@10 (63)
        on left: 42
        on right: 44
    $@11 (64)
        on left: 43
        on right: 44
    CONTROL_FLOW_OPT_ELSE <stmntList> (65)
        on left: 45 46
        on right: 36
    EXPRESSION <expr> (66)
        on left: 47 48 49 50 51 52 53 54 55 56 57 58
        on right: 27 28 29 30 33 36 38 41 44 47 48 49 50 51 52 53 54 55 63 65
    UNARY_OPERATOR <CharConst> (67)
        on left: 59 60
        on right: 47
    FUNCTION_CALL <expr> (68)
        on left: 61
        on right: 56
    FUNC_CALL_PARAM <exprList> (69)
        on left: 62 63
        on right: 61
    FUNC_CALL_PARAM_OPT <exprList> (70)
        on left: 64 65
        on right: 63 65
    CONSTANT <expr> (71)
        on left: 66 67 68 69
        on right: 58


State 0

    0 $accept: . INPUT $end

    $default  reduce using rule 1 (INPUT)

    INPUT  go to state 1


State 1

    0 $accept: INPUT . $end
    2 INPUT: INPUT . PROGRAM

    $end  shift, and go to state 2

    $default  reduce using rule 3 ($@1)

    PROGRAM  go to state 3
    $@1      go to state 4


State 2

    0 $accept: INPUT $end .

    $default  accept


State 3

    2 INPUT: INPUT PROGRAM .

    $default  reduce using rule 2 (INPUT)


State 4

    4 PROGRAM: $@1 . DEC_FUNCS START_FUNCTION DEC_FUNCS

    $default  reduce using rule 7 (DEC_FUNCS)

    DEC_FUNCS  go to state 5


State 5

    4 PROGRAM: $@1 DEC_FUNCS . START_FUNCTION DEC_FUNCS
    8 DEC_FUNCS: DEC_FUNCS . DEC_FUNC

    START_FUNC_DECL  shift, and go to state 6
    DATATYPE         shift, and go to state 7
    VOID             shift, and go to state 8

    START_FUNCTION  go to state 9
    DEC_FUNC        go to state 10
    RETURNTYPE      go to state 11


State 6

    6 START_FUNCTION: START_FUNC_DECL . $@2 LPARENT RPARENT FUNCTION_BLOCK

    $default  reduce using rule 5 ($@2)

    $@2  go to state 12


State 7

   15 RETURNTYPE: DATATYPE .

    $default  reduce using rule 15 (RETURNTYPE)


State 8

   16 RETURNTYPE: VOID .

    $default  reduce using rule 16 (RETURNTYPE)


State 9

    4 PROGRAM: $@1 DEC_FUNCS START_FUNCTION . DEC_FUNCS

    $default  reduce using rule 7 (DEC_FUNCS)

    DEC_FUNCS  go to state 13


State 10

    8 DEC_FUNCS: DEC_FUNCS DEC_FUNC .

    $default  reduce using rule 8 (DEC_FUNCS)


State 11

   10 DEC_FUNC: RETURNTYPE . IDENTIFIER $@3 LPARENT DEC_FUNC_CALL_PARAMS RPARENT FUNCTION_BLOCK

    IDENTIFIER  shift, and go to state 14


State 12

    6 START_FUNCTION: START_FUNC_DECL $@2 . LPARENT RPARENT FUNCTION_BLOCK

    LPARENT  shift, and go to state 15


State 13

    4 PROGRAM: $@1 DEC_FUNCS START_FUNCTION DEC_FUNCS .
    8 DEC_FUNCS: DEC_FUNCS . DEC_FUNC

    DATATYPE  shift, and go to state 7
    VOID      shift, and go to state 8

    DATATYPE  [reduce using rule 4 (PROGRAM)]
    VOID      [reduce using rule 4 (PROGRAM)]
    $default  reduce using rule 4 (PROGRAM)

    DEC_FUNC    go to state 10
    RETURNTYPE  go to state 11


State 14

   10 DEC_FUNC: RETURNTYPE IDENTIFIER . $@3 LPARENT DEC_FUNC_CALL_PARAMS RPARENT FUNCTION_BLOCK

    $default  reduce using rule 9 ($@3)

    $@3  go to state 16


State 15

    6 START_FUNCTION: START_FUNC_DECL $@2 LPARENT . RPARENT FUNCTION_BLOCK

    RPARENT  shift, and go to state 17


State 16

   10 DEC_FUNC: RETURNTYPE IDENTIFIER $@3 . LPARENT DEC_FUNC_CALL_PARAMS RPARENT FUNCTION_BLOCK

    LPARENT  shift, and go to state 18


State 17

    6 START_FUNCTION: START_FUNC_DECL $@2 LPARENT RPARENT . FUNCTION_BLOCK

    $default  reduce using rule 25 ($@4)

    FUNCTION_BLOCK  go to state 19
    $@4             go to state 20


State 18

   10 DEC_FUNC: RETURNTYPE IDENTIFIER $@3 LPARENT . DEC_FUNC_CALL_PARAMS RPARENT FUNCTION_BLOCK

    DATATYPE  shift, and go to state 7
    VOID      shift, and go to state 8

    $default  reduce using rule 11 (DEC_FUNC_CALL_PARAMS)

    DEC_FUNC_CALL_PARAMS  go to state 21
    RETURNTYPE            go to state 22


State 19

    6 START_FUNCTION: START_FUNC_DECL $@2 LPARENT RPARENT FUNCTION_BLOCK .

    $default  reduce using rule 6 (START_FUNCTION)


State 20

   26 FUNCTION_BLOCK: $@4 . LCURLYBRACE STATEMENTS RCURLYBRACE

    LCURLYBRACE  shift, and go to state 23


State 21

   10 DEC_FUNC: RETURNTYPE IDENTIFIER $@3 LPARENT DEC_FUNC_CALL_PARAMS . RPARENT FUNCTION_BLOCK

    RPARENT  shift, and go to state 24


State 22

   12 DEC_FUNC_CALL_PARAMS: RETURNTYPE . IDENTIFIER DEC_FUNC_CALL_PARAMS_OPT

    IDENTIFIER  shift, and go to state 25


State 23

   26 FUNCTION_BLOCK: $@4 LCURLYBRACE . STATEMENTS RCURLYBRACE

    $default  reduce using rule 17 (STATEMENTS)

    STATEMENTS  go to state 26


State 24

   10 DEC_FUNC: RETURNTYPE IDENTIFIER $@3 LPARENT DEC_FUNC_CALL_PARAMS RPARENT . FUNCTION_BLOCK

    $default  reduce using rule 25 ($@4)

    FUNCTION_BLOCK  go to state 27
    $@4             go to state 20


State 25

   12 DEC_FUNC_CALL_PARAMS: RETURNTYPE IDENTIFIER . DEC_FUNC_CALL_PARAMS_OPT

    COMMA  shift, and go to state 28

    $default  reduce using rule 13 (DEC_FUNC_CALL_PARAMS_OPT)

    DEC_FUNC_CALL_PARAMS_OPT  go to state 29


State 26

   18 STATEMENTS: STATEMENTS . STATEMENT
   26 FUNCTION_BLOCK: $@4 LCURLYBRACE STATEMENTS . RCURLYBRACE

    INTEGER_CONSTANT    shift, and go to state 30
    FLOAT_CONSTANT      shift, and go to state 31
    NEGATION            shift, and go to state 32
    CF_IF               shift, and go to state 33
    CF_FOR              shift, and go to state 34
    CF_WHILE            shift, and go to state 35
    CF_DO               shift, and go to state 36
    CF_RETURN           shift, and go to state 37
    LPARENT             shift, and go to state 38
    RCURLYBRACE         shift, and go to state 39
    BOOLEAN_CONSTANT    shift, and go to state 40
    MINUS               shift, and go to state 41
    DATATYPE            shift, and go to state 42
    IDENTIFIER          shift, and go to state 43
    CHARACTER_CONSTANT  shift, and go to state 44

    $default  reduce using rule 25 ($@4)

    STATEMENT       go to state 45
    FUNCTION_BLOCK  go to state 46
    $@4             go to state 20
    VARIABLE_DEF    go to state 47
    ASSIGNMENT      go to state 48
    EXPRESSION_SC   go to state 49
    RETURN_CALL     go to state 50
    CONTROL_FLOW    go to state 51
    EXPRESSION      go to state 52
    UNARY_OPERATOR  go to state 53
    FUNCTION_CALL   go to state 54
    CONSTANT        go to state 55


State 27

   10 DEC_FUNC: RETURNTYPE IDENTIFIER $@3 LPARENT DEC_FUNC_CALL_PARAMS RPARENT FUNCTION_BLOCK .

    $default  reduce using rule 10 (DEC_FUNC)


State 28

   14 DEC_FUNC_CALL_PARAMS_OPT: COMMA . RETURNTYPE IDENTIFIER DEC_FUNC_CALL_PARAMS_OPT

    DATATYPE  shift, and go to state 7
    VOID      shift, and go to state 8

    RETURNTYPE  go to state 56


State 29

   12 DEC_FUNC_CALL_PARAMS: RETURNTYPE IDENTIFIER DEC_FUNC_CALL_PARAMS_OPT .

    $default  reduce using rule 12 (DEC_FUNC_CALL_PARAMS)


State 30

   66 CONSTANT: INTEGER_CONSTANT .

    $default  reduce using rule 66 (CONSTANT)


State 31

   67 CONSTANT: FLOAT_CONSTANT .

    $default  reduce using rule 67 (CONSTANT)


State 32

   60 UNARY_OPERATOR: NEGATION .

    $default  reduce using rule 60 (UNARY_OPERATOR)


State 33

   36 CONTROL_FLOW: CF_IF . EXPRESSION LCURLYBRACE $@5 STATEMENTS $@6 RCURLYBRACE CONTROL_FLOW_OPT_ELSE

    INTEGER_CONSTANT    shift, and go to state 30
    FLOAT_CONSTANT      shift, and go to state 31
    NEGATION            shift, and go to state 32
    LPARENT             shift, and go to state 38
    BOOLEAN_CONSTANT    shift, and go to state 40
    MINUS               shift, and go to state 41
    IDENTIFIER          shift, and go to state 57
    CHARACTER_CONSTANT  shift, and go to state 44

    EXPRESSION      go to state 58
    UNARY_OPERATOR  go to state 53
    FUNCTION_CALL   go to state 54
    CONSTANT        go to state 55


State 34

   38 CONTROL_FLOW: CF_FOR . $@7 VARIABLE_DEF EXPRESSION SEMICOLON ASSIGNMENT LCURLYBRACE STATEMENTS RCURLYBRACE

    $default  reduce using rule 37 ($@7)

    $@7  go to state 59


State 35

   41 CONTROL_FLOW: CF_WHILE . EXPRESSION LCURLYBRACE $@8 STATEMENTS $@9 RCURLYBRACE

    INTEGER_CONSTANT    shift, and go to state 30
    FLOAT_CONSTANT      shift, and go to state 31
    NEGATION            shift, and go to state 32
    LPARENT             shift, and go to state 38
    BOOLEAN_CONSTANT    shift, and go to state 40
    MINUS               shift, and go to state 41
    IDENTIFIER          shift, and go to state 57
    CHARACTER_CONSTANT  shift, and go to state 44

    EXPRESSION      go to state 60
    UNARY_OPERATOR  go to state 53
    FUNCTION_CALL   go to state 54
    CONSTANT        go to state 55


State 36

   44 CONTROL_FLOW: CF_DO . LCURLYBRACE $@10 STATEMENTS $@11 RCURLYBRACE CF_WHILE EXPRESSION SEMICOLON

    LCURLYBRACE  shift, and go to state 61


State 37

   31 RETURN_CALL: CF_RETURN . RETURN_CALL_OPT SEMICOLON

    INTEGER_CONSTANT    shift, and go to state 30
    FLOAT_CONSTANT      shift, and go to state 31
    NEGATION            shift, and go to state 32
    LPARENT             shift, and go to state 38
    BOOLEAN_CONSTANT    shift, and go to state 40
    MINUS               shift, and go to state 41
    IDENTIFIER          shift, and go to state 57
    CHARACTER_CONSTANT  shift, and go to state 44

    $default  reduce using rule 32 (RETURN_CALL_OPT)

    RETURN_CALL_OPT  go to state 62
    EXPRESSION       go to state 63
    UNARY_OPERATOR   go to state 53
    FUNCTION_CALL    go to state 54
    CONSTANT         go to state 55


State 38

   55 EXPRESSION: LPARENT . EXPRESSION RPARENT

    INTEGER_CONSTANT    shift, and go to state 30
    FLOAT_CONSTANT      shift, and go to state 31
    NEGATION            shift, and go to state 32
    LPARENT             shift, and go to state 38
    BOOLEAN_CONSTANT    shift, and go to state 40
    MINUS               shift, and go to state 41
    IDENTIFIER          shift, and go to state 57
    CHARACTER_CONSTANT  shift, and go to state 44

    EXPRESSION      go to state 64
    UNARY_OPERATOR  go to state 53
    FUNCTION_CALL   go to state 54
    CONSTANT        go to state 55


State 39

   26 FUNCTION_BLOCK: $@4 LCURLYBRACE STATEMENTS RCURLYBRACE .

    $default  reduce using rule 26 (FUNCTION_BLOCK)


State 40

   68 CONSTANT: BOOLEAN_CONSTANT .
